# transition-energetique

./: .gitignore  CLAUDE.md  MODEL.md  SOURCES.md  VARIABILITY_ROADMAP.md  bilan_energetique_mensuel.csv  france_energy_transition.ipynb  index.html  main.py  pyproject.toml  rapport_complet.html  rapport_complet.ipynb  rapport_complet_avec_code.html  resume_par_mois.csv
.beads/: issues.jsonl
docs/plans/: 2026-02-25-recalibration-design.md  2026-02-25-recalibration-plan.md  2026-02-25-reference-consumption-table.md
src/: __init__.py  agriculture.py  config.py  consumption.py  data_ingestion.py  emissions.py  energy.py  financial.py  heating.py  industrialisation.py  production.py  rapport.py  secteurs.py  sensitivity.py  sources.py  storage.py  tarification.py  temporal.py  trajectory.py  transport.py
src/database/: __init__.py  schema.py  store.py
src/downloaders/: __init__.py  pvgis_solar.py  rte_eco2mix.py
src/ods_generator/: __init__.py  balance_sheet.py  calc_sheets.py  formatting.py  knob_registry.py  source_sheets.py  synthesis_sheet.py  writer.py
tests/: __init__.py  test_agriculture.py  test_config.py  test_consistency.py  test_consumption.py  test_emissions.py  test_energy.py  test_heating.py  test_industrialisation.py  test_ods_integration.py  test_ods_knobs.py  test_profiles.py  test_rapport.py  test_secteurs.py  test_sources.py  test_tarification.py  test_trajectory.py  test_transport.py
